[gd_scene format=3 uid="uid://csl6umu8jjb8h"]

[ext_resource type="Script" uid="uid://ekofeb8466ha" path="res://scripts/demo_screen.gd" id="1_kcx3k"]
[ext_resource type="FontFile" uid="uid://bbmspah8tojot" path="res://fonts/Alkhemikal_font.tres" id="2_0jkhy"]
[ext_resource type="Texture2D" uid="uid://cq0ljs827dqu2" path="res://textures/logos/itchio-logo-textless-white.png" id="3_0jkhy"]
[ext_resource type="Texture2D" uid="uid://c2idsxw8hma3o" path="res://textures/logos/GitHub_Invertocat_White.png" id="4_xgm04"]

[node name="demo_screen" type="CanvasLayer" unique_id=1097633503]
script = ExtResource("1_kcx3k")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1396348704]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect" unique_id=203881192]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_constants/margin_top = 60

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer" unique_id=682416353]
clip_contents = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("2_0jkhy")
theme_override_font_sizes/normal_font_size = 25
text = "Thanks for playing the EVERGRINT!"
fit_content = true
horizontal_alignment = 1

[node name="Button" type="Button" parent="ColorRect" unique_id=1276175269]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.5
offset_right = 50.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0jkhy")
theme_override_font_sizes/font_size = 20
text = "Continue"

[node name="links" type="MarginContainer" parent="ColorRect" unique_id=460968856]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/links" unique_id=1960938722]
layout_mode = 2

[node name="itch" type="TextureButton" parent="ColorRect/links/HBoxContainer" unique_id=1848614187]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_0jkhy")
ignore_texture_size = true
stretch_mode = 5

[node name="github" type="TextureButton" parent="ColorRect/links/HBoxContainer" unique_id=539717728]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("4_xgm04")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ColorRect/links/HBoxContainer/itch" to="." method="_on_itch_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/links/HBoxContainer/itch" to="." method="_on_itch_mouse_exited"]
[connection signal="pressed" from="ColorRect/links/HBoxContainer/itch" to="." method="_on_itch_pressed"]
[connection signal="mouse_entered" from="ColorRect/links/HBoxContainer/github" to="." method="_on_github_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/links/HBoxContainer/github" to="." method="_on_github_mouse_exited"]
[connection signal="pressed" from="ColorRect/links/HBoxContainer/github" to="." method="_on_github_pressed"]
